--- a/La-note-enchantée.html
+++ b/La-note-enchantée.html
@@ -201,7 +201,7 @@
             <div class="footer">
                 <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
                 <p><i class="fas fa-hands-helping fa-xs"></i> Devenir partenaire</p>
-                <p>Mentions légales</li>
+                <p>Mentions légales</p>
                 <p><a href="mailto:ohmyfood@contact.com" title="Contact" target="_blank">Contact</a></p>
             </div>
         </footer>
