--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/index-mobile.css">
-        <link rel="stylesheet" href="css/index-desktop.css">
-        <link rel="stylesheet" href="css/index-tablette.css">
+        <link rel="stylesheet" href="css/style-mobile.css">
+        <link rel="stylesheet" href="css/style-desktop.css">
+        <link rel="stylesheet" href="css/style-tablette.css">
         <title>Ohmyfood</title>
     </head>
 
@@ -39,46 +39,44 @@
             </nav>
         </header>
 
-        <section class="information">
-            <article>
-                <h2>Réservez le menu qui<br> vous convient</h2>
-                <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
-                <div class="degrade">
-                    <a href="#">Explorer nos restaurants</a>
-                </div>
-            </article>
-
-            <div class="fonctionnement">
-                <h2>Fonctionnement</h2>
-                <div class="liste-fonc">
-                    <p class="numero">1</p>
-                    <p><i class="fas fa-mobile-alt fa-lg"></i></p>
-                    <p class="texte">Choisissez un restaurant</p>
-                </div>
-                <div class="liste-fonc">
-                    <p class="numero">2</p>
-                    <p><i class="fas fa-list-ul fa-lg"></i></p>
-                    <p class="texte">Composez votre menu</p>
-                </div>
-                <div class="liste-fonc">
-                    <p class="numero">3</p>
-                    <p><i class="fas fa-store fa-lg"></i></p>
-                    <p class="texte">Dégustez au restaurant</p>
-                </div>
+        <article>
+            <h2>Réservez le menu qui<br> vous convient</h2>
+            <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
+            <div class="degrade">
+                <a href="#">Explorer nos restaurants</a>
             </div>
-        </section>
+        </article>
+
+        <div class="fonctionnement">
+            <h2>Fonctionnement</h2>
+            <div class="liste-fonc">
+                <p class="numero">1</p>
+                <p><i class="fas fa-mobile-alt fa-lg"></i></p>
+                <p class="texte">Choisissez un restaurant</p>
+            </div>
+            <div class="liste-fonc">
+                <p class="numero">2</p>
+                <p><i class="fas fa-list-ul fa-lg"></i></p>
+                <p class="texte">Composez votre menu</p>
+            </div>
+            <div class="liste-fonc">
+                <p class="numero">3</p>
+                <p><i class="fas fa-store fa-lg"></i></p>
+                <p class="texte">Dégustez au restaurant</p>
+            </div>
+        </div>
 
         <section class="restaurants">
             <h2>Restaurants</h2>
             <div class="carte">
-                <a href="La palette du goût.html">
+                <a href="La-palette-du-goût.html">
                     <div class="carte-image">
                         <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
                         <p class="etiquette">Nouveau</p>
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="La palette du goût.html">
+                    <a href="La-palette-du-goût.html">
                         <h3>La palette du goût</h3>
                         <p class="info">Ménilmontant</p>
                     </a>
@@ -87,14 +85,14 @@
                 </div>
             </div>
             <div class="carte">
-                <a href="La note enchantée.html">
+                <a href="La-note-enchantée.html">
                     <div class="carte-image">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="La note enchantée">
                         <p class="etiquette">Nouveau</p>
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="La note enchantée.html">
+                    <a href="La-note-enchantée.html">
                         <h3>La note enchantée</h3>
                         <p class="info">Charonne</p>
                     </a>
@@ -103,14 +101,14 @@
                 </div>
             </div>
             <div class="carte">
-                <a href="À la française.html">
+                <a href="À-la-française.html">
                     <div class="carte-image">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="À la française">
                         <p class="etiquette">Nouveau</p>
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="À la française.html">
+                    <a href="À-la-française.html">
                         <h3>À la française</h3>
                         <p class="info">Cité Rouge</p>
                     </a>
@@ -119,7 +117,7 @@
                 </div>
             </div>
             <div class="carte">
-                <a href="Le délice des sens.html">
+                <a href="Le-délice-des-sens.html">
                     <div class="carte-image">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png"
                             alt="Le délice des sens">
@@ -127,7 +125,7 @@
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="Le délice des sens.html">
+                    <a href="Le-délice-des-sens.html">
                         <h3>Le délice des sens</h3>
                         <p class="info">Folie-Méricourt</p>
                     </a>
@@ -144,7 +142,7 @@
             <div class="footer">
                 <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
                 <p><i class="fas fa-hands-helping fa-xs"></i> Devenir partenaire</p>
-                <p>Mentions légales</li>
+                <p>Mentions légales</p>
                 <p><a href="mailto:ohmyfood@contact.com" title="Contact" target="_blank">Contact</a></p>
             </div>
         </footer>
