--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/style-mobile.css">
-        <link rel="stylesheet" href="css/style-desktop.css">
-        <link rel="stylesheet" href="css/style-tablette.css">
+        <link rel="stylesheet" href="css/accueil.css">
         <title>Ohmyfood</title>
     </head>
 
@@ -49,34 +47,34 @@
 
         <div class="fonctionnement">
             <h2>Fonctionnement</h2>
-            <div class="list-fonc">
-                <p class="number">1</p>
+            <div class="list">
+                <p class="list__number">1</p>
                 <p><i class="fas fa-mobile-alt fa-lg"></i></p>
-                <p class="text">Choisissez un restaurant</p>
+                <p class="list__text">Choisissez un restaurant</p>
             </div>
-            <div class="list-fonc">
-                <p class="number">2</p>
+            <div class="list">
+                <p class="list__number">2</p>
                 <p><i class="fas fa-list-ul fa-lg"></i></p>
-                <p class="text">Composez votre menu</p>
+                <p class="list__text">Composez votre menu</p>
             </div>
-            <div class="list-fonc">
-                <p class="number">3</p>
+            <div class="list">
+                <p class="list__number">3</p>
                 <p><i class="fas fa-store fa-lg"></i></p>
-                <p class="text">Dégustez au restaurant</p>
+                <p class="list__text">Dégustez au restaurant</p>
             </div>
         </div>
 
         <section class="restaurants">
             <h2>Restaurants</h2>
             <div class="card">
-                <a href="La-palette-du-goût.html">
+                <a href="La-palette-du-gout.html">
                     <div class="card-image">
                         <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
                 <div class="heading-card">
-                    <a href="La-palette-du-goût.html">
+                    <a href="La-palette-du-gout.html">
                         <h3>La palette du goût</h3>
                         <p class="info">Ménilmontant</p>
                     </a>
@@ -85,14 +83,14 @@
                 </div>
             </div>
             <div class="card">
-                <a href="La-note-enchantée.html">
+                <a href="La-note-enchantee.html">
                     <div class="card-image">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="La note enchantée">
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
                 <div class="heading-card">
-                    <a href="La-note-enchantée.html">
+                    <a href="La-note-enchantee.html">
                         <h3>La note enchantée</h3>
                         <p class="info">Charonne</p>
                     </a>
@@ -101,14 +99,14 @@
                 </div>
             </div>
             <div class="card">
-                <a href="À-la-française.html">
+                <a href="A-la-francaise.html">
                     <div class="card-image">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="À la française">
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
                 <div class="heading-card">
-                    <a href="À-la-française.html">
+                    <a href="A-la-francaise.html">
                         <h3>À la française</h3>
                         <p class="info">Cité Rouge</p>
                     </a>
@@ -117,7 +115,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="Le-délice-des-sens.html">
+                <a href="Le-delice-des-sens.html">
                     <div class="card-image">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png"
                             alt="Le délice des sens">
@@ -125,7 +123,7 @@
                     </div>
                 </a>
                 <div class="heading-card">
-                    <a href="Le-délice-des-sens.html">
+                    <a href="Le-delice-des-sens.html">
                         <h3>Le délice des sens</h3>
                         <p class="info">Folie-Méricourt</p>
                     </a>
