--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
 
         <header>
              <img src="images/logo/ohmyfood@2x.svg" alt="logo">
-           <!-- <h1>ohmyfood</h1>-->
+            
             <nav>
-                <i class="fas fa-map-marker-alt"></i>
-                <p><strong>Paris, Belleville</strong></p>
+                <form>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input type="text" placeholder="Paris, Belleville" class="city">
+                </form>
+                <!--
+                <p><strong>Paris, Belleville</strong></p>-->
             </nav>
         </header>
 
         <article>
-            <h2>Réservez le menu qui<br> vous convient</h2>
+            <h1>Réservez le menu qui<br> vous convient</h1>
             <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
             <div class="degrade">
                 <a href="#">Explorer nos restaurants</a>
